<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">module_login</string>
    <string name="login_title">云锁登录</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint">请输入6-20位数字和字母作为密码</string>
    <string name="login">登录</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="new_user_register">新用户注册</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="sure">确认</string>
    <string name="selected_country_title">国家/地区代码</string>
    <string name="default_country_code">中国/+86</string>
    <string name="reset_password">重置密码</string>
    <string name="wait">等待</string>
    <string name="login_register_rule">注册即表示您同意隐私条款及使用协议</string>
    <string name="login_place_input_verify_code">请输入验证码</string>
    <string name="login_pwd_modify_success">密码修改成功，请用新密码登录</string>
    <string name="login_sure">确定</string>
    <string name="login_please_input_right_num">请正确输入手机号码</string>
    <string-array name="CountryCodes">
        <item>阿富汗/+93</item>
        <item>阿尔巴尼亚/+355</item>
        <item>阿尔及利亚/+213</item>
        <item>安道尔共和国/+376</item>
        <item>安哥拉/+244</item>
        <item>阿根廷/+54</item>
        <item>亚美尼亚/+374</item>
        <item>澳大利亚/+61</item>
        <item>奥地利/+43</item>
        <item>阿塞拜疆/+994</item>
        <item>巴林/+973</item>
        <item>孟加拉国/+880</item>
        <item>白俄罗斯/+375</item>
        <item>比利时/+32</item>
        <item>伯利兹/+501</item>
        <item>贝宁/+229</item>
        <item>玻利维亚/+591</item>
        <item>博茨瓦纳/+267</item>
        <item>巴西/+55</item>
        <item>文莱/+673</item>
        <item>保加利亚/+359</item>
        <item>布基纳法索/+226</item>
        <item>缅甸/+95</item>
        <item>布隆迪/+257</item>
        <item>柬埔寨/+855</item>
        <item>喀麦隆/+237</item>
        <item>加拿大/+1</item>
        <item>印度尼西亚/+235</item>
        <item>智利/+56</item>
        <item>中国/+86</item>
        <item>哥伦比亚/+57</item>
        <item>刚果/+242</item>
        <item>库克群岛/+682</item>
        <item>哥斯达黎加/+506</item>
        <item>古巴/+53</item>
        <item>塞浦路斯/+357</item>
        <item>捷克/+420</item>
        <item>丹麦/+45</item>
        <item>吉布提/+253</item>
        <item>厄瓜多尔/+593</item>
        <item>埃及/+20</item>
        <item>萨尔瓦多/+503</item>
        <item>爱沙尼亚/+372</item>
        <item>埃塞俄比亚/+251</item>
        <item>斐济/+679</item>
        <item>芬兰/+358</item>
        <item>法国/+33</item>
        <item>法属玻利尼西亚/+689</item>
        <item>冈比亚/+220</item>
        <item>格鲁吉亚/+995</item>
        <item>德国/+49</item>
        <item>加纳/+233</item>
        <item>直布罗陀/+350</item>
        <item>希腊/+30</item>
        <item>危地马拉/+502</item>
        <item>几内亚/+224</item>
        <item>海地/+509</item>
        <item>洪都拉斯/+504</item>
        <item>香港/+852</item>
        <item>匈牙利/+36</item>
        <item>印度/+91</item>
        <item>印度尼西亚/+62</item>
        <item>伊朗/+98</item>
        <item>伊拉克/+964</item>
        <item>爱尔兰/+353</item>
        <item>以色列/+972</item>
        <item>意大利/+39</item>
        <item>日本/+81</item>
        <item>约旦/+962</item>
        <item>哈萨克斯坦/+7</item>
        <item>肯尼亚/+254</item>
        <item>吉尔吉斯坦/+996</item>
        <item>老挝/+856</item>
        <item>拉脱维亚/+371</item>
        <item>黎巴嫩/+961</item>
        <item>莱索托/+266</item>
        <item>利比里亚/+231</item>
        <item>利比亚/+218</item>
        <item>列支敦士登/+423</item>
        <item>立陶宛/+370</item>
        <item>卢森堡/+352</item>
        <item>澳门/+853</item>
        <item>马其顿文/+389</item>
        <item>马达加斯加/+261</item>
        <item>马拉维/+265</item>
        <item>马来西亚/+60</item>
        <item>马尔代夫/+960</item>
        <item>马里/+223</item>
        <item>马耳他/+356</item>
        <item>毛里求斯/+230</item>
        <item>墨西哥/+52</item>
        <item>摩尔多瓦/+373</item>
        <item>摩纳哥/+377</item>
        <item>蒙古/+976</item>
        <item>摩洛哥/+212</item>
        <item>莫桑比克/+258</item>
        <item>纳米比亚/+264</item>
        <item>瑙鲁/+674</item>
        <item>尼泊尔/+977</item>
        <item>荷兰/+31</item>
        <item>新西兰/+64</item>
        <item>尼加拉瓜/+505</item>
        <item>尼日尔/+227</item>
        <item>尼日利亚/+234</item>
        <item>朝鲜/+850</item>
        <item>挪威/+47</item>
        <item>阿曼/+968</item>
        <item>巴基斯坦/+92</item>
        <item>巴拿马/+507</item>
        <item>巴布亚新几内亚/+675</item>
        <item>巴拉圭/+595</item>
        <item>秘鲁/+51</item>
        <item>菲律宾/+63</item>
        <item>波兰/+48</item>
        <item>葡萄牙/+351</item>
        <item>波多黎各/+1</item>
        <item>卡塔尔/+974</item>
        <item>罗马尼亚/+40</item>
        <item>俄罗斯/+7</item>
        <item>圣马力诺/+378</item>
        <item>圣多美和普林西比/+239</item>
        <item>沙特阿拉伯/+239</item>
        <item>塞内加尔/+221</item>
        <item>塞拉利昂/+232</item>
        <item>新加坡/+65</item>
        <item>斯洛伐克/+421</item>
        <item>斯洛文尼亚/+386</item>
        <item>所罗门群岛/+677</item>
        <item>索马里/+252</item>
        <item>南非/+27</item>
        <item>韩国/+82</item>
        <item>西班牙/+34</item>
        <item>斯里兰卡94</item>
        <item>塞波尼斯-克罗地亚文/+290</item>
        <item>苏丹/+249</item>
        <item>苏里南/+597</item>
        <item>斯威士兰/+268</item>
        <item>瑞典/+46</item>
        <item>瑞士/+41</item>
        <item>叙利亚/+963</item>
        <item>台湾省/+886</item>
        <item>塔吉克斯坦/+992</item>
        <item>坦桑尼亚/+255</item>
        <item>泰国/+66</item>
        <item>多哥/+228</item>
        <item>汤加/+676</item>
        <item>突尼斯/+216</item>
        <item>土耳其/+90</item>
        <item>土库曼斯坦/+993</item>
        <item>阿拉伯联合酋长国/+971</item>
        <item>乌干达/+256</item>
        <item>英国/+44</item>
        <item>乌克兰/+380</item>
        <item>乌拉圭/+598</item>
        <item>美国/+1</item>
        <item>乌兹别克斯坦/+998</item>
        <item>委内瑞拉/+58</item>
        <item>越南/+84</item>
        <item>也门/+967</item>
        <item>赞比亚/+260</item>
        <item>津巴布韦/+263</item>
    </string-array>
</resources>
