<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">

    <include
        android:id="@+id/title_bar"
        layout="@layout/toolbar_white" />


    <LinearLayout
        android:id="@+id/phone_layout"
        style="@style/Form"
        app:layout_constraintTop_toBottomOf="@id/title_bar">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_phone" />


        <com.ut.commoncomponent.ZpPhoneEditText
            android:id="@+id/edt_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:paddingStart="@dimen/base_20dp"
            android:paddingEnd="@dimen/base_20dp"
            android:textColorHint="@color/grayC"
            android:textSize="@dimen/base_14sp" />

        <FrameLayout
            android:id="@+id/img_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_8dp">

            <View
                android:layout_width="@dimen/base_20dp"
                android:layout_height="@dimen/base_20dp"
                android:background="@drawable/selector_clear" />
        </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/password_layout"
        style="@style/Form"
        app:layout_constraintTop_toBottomOf="@id/phone_layout">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_password" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingStart="@dimen/base_20dp"
            android:paddingEnd="@dimen/base_20dp"
            android:textColorHint="@color/grayC"
            android:textSize="@dimen/base_14sp" />

       <FrameLayout
           android:id="@+id/see_password_layout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="@dimen/base_8dp">
           <CheckBox
               android:id="@+id/see_password"
               android:layout_width="@dimen/base_20dp"
               android:layout_height="@dimen/base_20dp"
               android:background="@drawable/selector_eye"
               android:button="@null" />
       </FrameLayout>
    </LinearLayout>

    <com.ut.commoncomponent.LoadingButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_50dp"
        android:layout_marginStart="@dimen/base_20dp"
        android:layout_marginTop="@dimen/base_30dp"
        android:layout_marginEnd="@dimen/base_20dp"
        app:button_label="@string/login"
        app:button_label_color="@android:color/white"
        app:button_label_text_size="@dimen/base_17sp"
        app:layout_constraintTop_toBottomOf="@id/password_layout" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base_10dp"
        android:layout_marginTop="@dimen/base_20dp"
        android:text="@string/new_user_register"
        android:textColor="@color/color_base_text"
        android:textSize="@dimen/base_14sp"
        android:transitionName="register"
        app:layout_constraintLeft_toLeftOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_20dp"
        android:layout_marginRight="@dimen/base_10dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/color_base_text"
        android:textSize="@dimen/base_14sp"
        android:transitionName="forgetPassword"
        app:layout_constraintRight_toRightOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />


</android.support.constraint.ConstraintLayout>