<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/base_20dp"
        android:paddingRight="@dimen/base_20dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/base_17sp"
            android:transitionName="forgetPassword" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        style="@style/Form"
        app:layout_constraintTop_toBottomOf="@id/title_bar">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_phone" />


        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/base_20dp"
            android:layout_marginEnd="@dimen/base_20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/img_clear"
            android:layout_width="@dimen/base_20dp"
            android:layout_height="@dimen/base_20dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/selector_clear" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        style="@style/Form"
        app:layout_constraintTop_toBottomOf="@id/phone_layout">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_password" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/base_20dp"
            android:layout_marginEnd="@dimen/base_20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="#CCCCCC"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/see_password"
            android:layout_width="@dimen/base_20dp"
            android:layout_height="@dimen/base_20dp"
            android:background="@drawable/selector_eye"
            android:button="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verify_code_layout"
        style="@style/Form"
        app:layout_constraintTop_toBottomOf="@id/password_layout">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/selector_verify_code" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/base_20dp"
            android:layout_marginRight="@dimen/base_20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:lines="1" />

        <TextView
            android:id="@+id/tv_get_verify_code"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:background="@drawable/selector_loading_button"
            android:elevation="2dp"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


    <com.ut.commoncomponent.LoadingButton
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/base_20dp"
        android:layout_marginTop="@dimen/base_30dp"
        android:layout_marginRight="@dimen/base_20dp"
        app:button_label="@string/sure"
        app:button_label_color="@android:color/white"
        app:button_label_text_size="17sp"
        app:layout_constraintTop_toBottomOf="@id/verify_code_layout" />


</android.support.constraint.ConstraintLayout>